# rust_web_api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: api_doc.rs  main.rs
src/models/: mod.rs  user.rs
src/routes/: hello.rs  mod.rs  user.rs
